--- a/about.html
+++ b/about.html
@@ -11,12 +11,12 @@
     <meta name="keywords" content="gaspar,gaspar fiks,fiks,portfolio,ux,ui,graphic,design,branding,experience">
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
 
 </head>
 <body> 
 
-    <header><a href="/index.html"><h4 class="inicio" data-hover="Gaspar.works">Gaspar.</h4></a></header>
+    <header><a href="index.html"><h4 class="inicio" data-hover="Gaspar.works">Gaspar.</h4></a></header>
 
     <div class="container">
         <div class="row">
@@ -27,7 +27,7 @@
         </div>
 
         <div class="row">
-            <img class="foto-entera" src="/images/foto-entera.jpg" alt="Gaspar Fiks">
+            <img class="foto-entera" src="images/foto-entera.jpg" alt="Gaspar Fiks">
         </div>
 
         <div class="row">
